--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@adonisjs/shield": "^7.1.1",
     "@adonisjs/view": "^6.2.0",
     "alpinejs": "^3.13.2",
+    "axios": "^1.6.1",
     "bootstrap-icons": "^1.11.1",
     "luxon": "^3.4.3",
     "proxy-addr": "^2.0.7",
