--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "alpinejs": "^3.13.2",
     "axios": "^1.6.1",
     "bootstrap-icons": "^1.11.1",
+    "emoji.json": "^15.1.0",
     "luxon": "^3.4.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
